# neosim

./: .gitignore  README.md  neosim_self.yaml  pyproject.toml  requirements.txt
docs/: distribution-bridge.md
neosim/: __init__.py  api.py  cli.py
neosim/agents/: __init__.py  advisor.py  base.py  buyer.py  channel.py  competitor.py
neosim/benchmarks/: __init__.py
neosim/core/: __init__.py  config.py  market_data.py  metrics.py  simulation.py  web_analyzer.py
neosim/execution/: __init__.py  calendar.py  distribution.py  enhance.py
